objects/project_cloud__Expense2__c.object
<CustomObject>
    <description>Object for capturing expense information related to a project.</description>
    <fields>
        <fullName>project_cloud__Amount__c</fullName>
        <inlineHelpText>The amount of the expense.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This check box will indicate if the Expense record has been approved.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Cost_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defines the sub-area that this expense is related to.</inlineHelpText>
        <label>Cost Area</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>project_cloud__Area__c.project_cloud__Area__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>project_cloud__Area__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Cost</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Area__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <inlineHelpText>The date the expense was incurred.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <inlineHelpText>A short description of the expense.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Task that this expense is related to.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Project Task does not belong to related Project</errorMessage>
            <filterItems>
                <field>project_cloud__Project_Task__c.project_cloud__Project_Phase__r.project_cloud__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.project_cloud__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project that this expense is related to.</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This check box will indicate if the Expense record has been rejected.</inlineHelpText>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                    <label>Actual</label>
                </value>
                <value>
                    <fullName>Budgeted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Expense</label>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>project_cloud__Project_Task_Must_Be_From_Same_Project</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(project_cloud__Project_Task__c)) &amp;&amp; project_cloud__Project__c != project_cloud__Project_Task__r.project_cloud__Project_Phase__r.project_cloud__Project__c</errorConditionFormula>
        <errorDisplayField>project_cloud__Project_Task__c</errorDisplayField>
        <errorMessage>The related Project Task must come from the related Project</errorMessage>
    </validationRules>
</CustomObject>